--- a/less/home-page.less
+++ b/less/home-page.less
@@ -25,6 +25,17 @@
       border-radius: 20px;
       height: 100%;
     }
+    @media @phone{
+      .blast{
+
+      }
+      .sky{
+        display: none;
+      }
+      .launch{
+        display: none;
+      }
+    }
   }
 
   .visit-planets {
@@ -58,6 +69,12 @@
       }
 
       .btn {
+        .buttonMixin(white, @ebony-clay, 1.5rem);
+
+        &:hover {
+          .buttonMixin(@ebony-clay, white, 1.5rem);
+        }
+
       }
     }
 
