--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,25 @@
 // Navigation code here
+.navBarClass{
+    background-color: @nav-color;
+    height: 125px;
+    h1{
+        padding-top: 25px;
+        font-size: 4rem;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+    .headerNavigation{
+        .flexDisplay(flex,row);
+        width: 100%;
+        flex-wrap: nowrap;
+        align-items: center;
+        justify-content: center;
+        
+        a{
+            margin: 0 auto;
+            text-decoration: none;
+            color:@ebony-clay;
+            font-size: 2rem;
+        }
+    }
+}
