--- a/less/variables.less
+++ b/less/variables.less
@@ -22,5 +22,6 @@
 @waterloo: #81848E;
 @btn-bg-color: #22283A;
 @border-real: #dee2e6;
-
+@nav-color: #e7e7e7;
 // Mobile var
+@phone:"(max-width:500px)";
