--- a/css/index.css
+++ b/css/index.css
@@ -173,10 +173,17 @@ p {
 .navBarClass .headerNavigation {
   display: flex;
   flex-direction: row;
-  width: 100%;
   flex-wrap: nowrap;
   align-items: center;
   justify-content: center;
+  margin-left: 35%;
+  margin-right: 35%;
+}
+@media (max-width: 500px) {
+  .navBarClass .headerNavigation {
+    margin-left: 5%;
+    margin-right: 5%;
+  }
 }
 .navBarClass .headerNavigation a {
   margin: 0 auto;
@@ -193,6 +200,9 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.home .intro img {
+  width: 100%;
 }
 .home .intro h2 {
   padding: 15px;
@@ -211,7 +221,13 @@ footer {
   border-radius: 20px;
   height: 100%;
 }
-@media "(max-width:500px)" {
+@media (max-width: 500px) {
+  .home .space-images .blast {
+    margin: 0 auto;
+    width: 85%;
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
   .home .space-images .sky {
     display: none;
   }
@@ -235,8 +251,18 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 500px) {
+  .home .walk {
+    flex-direction: column-reverse;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 100%;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -262,9 +288,26 @@ footer {
   width: 25%;
   border-radius: 5px;
 }
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    color: white;
+    background-color: #23293B;
+    font-size: 1.5rem;
+    text-align: center;
+    padding: 5% 10% 5% 10%;
+    width: 100%;
+    border-radius: 5px;
+  }
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    width: 100%;
+    margin: 0% 0% 3% 0%;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
