--- a/less/navigation.less
+++ b/less/navigation.less
@@ -4,16 +4,17 @@
     height: 125px;
     h1{
         padding-top: 25px;
-        font-size: 4rem;
-        text-align: center;
+        .h1FontSizeAlignCenter();
         margin-bottom: 20px;
     }
     .headerNavigation{
         .flexDisplay(flex,row);
-        width: 100%;
         flex-wrap: nowrap;
-        align-items: center;
-        justify-content: center;
+        .centerItems();
+        .marginLeftRight(35%, 35%);
+        @media @phone{
+            .marginLeftRight(5%, 5%);
+        }
         
         a{
             margin: 0 auto;
