--- a/less/navigation.less
+++ b/less/navigation.less
@@ -12,6 +12,9 @@
         flex-wrap: nowrap;
         .centerItems();
         .marginLeftRight(35%, 35%);
+        @media @laptop{
+            .marginLeftRight(15%, 15%);
+        }
         @media @phone{
             .marginLeftRight(5%, 5%);
         }
