--- a/less/home-page.less
+++ b/less/home-page.less
@@ -88,7 +88,12 @@
           .buttonMixin(@ebony-clay, white, 1.5rem, 2% 4% 2% 4%, 25%);
         }
         @media @phone{
-          .buttonMixin(white, @ebony-clay, 1.5rem, 5% 10% 5% 10%,100%)
+
+          .buttonMixin(white, @ebony-clay, 1.5rem, 5% 10% 5% 10%,100%);
+
+          &:hover {
+            .buttonMixin(@ebony-clay, white, 1.5rem, 5% 10% 5% 10%,100%);
+          }
         }
       }
     }
